# CamForge-Next

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: docker.yml  release.yml  test.yml
crates/camforge-core/: Cargo.toml
crates/camforge-core/src/: full_motion.rs  geometry.rs  lib.rs  motion.rs  profile.rs  types.rs
crates/camforge-server/: Cargo.toml
crates/camforge-server/src/: error.rs  main.rs
crates/camforge-server/src/routes/: export.rs  mod.rs  simulation.rs
docs/: ALGORITHMS.md  ARCHITECTURE.md  AUDIT_REPORT_v0.3.3.md  DEPLOYMENT.md  REFACTORING_PLAN.md  Review.md  TODO.md  WEB_OPTIMIZATION.md
public/: manifest.json  robots.txt  splash.css  splash.js
public/fonts/: fonts.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: export.rs  simulation.rs
src/api/: http.ts  index.ts  tauri.ts
src/api/__tests__/: api.test.ts
src/components/: ErrorBoundary.tsx
src/components/__tests__/: NumberInput.test.tsx
src/components/animation/: CamAnimation.tsx
src/components/charts/: CurvatureChart.tsx  GeometryChart.tsx  MotionCurves.tsx  PressureAngleChart.tsx  index.ts
src/components/controls/: NumberInput.tsx  Select.tsx  Toggle.tsx
src/components/layout/: HelpPanel.tsx  MainCanvas.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  index.ts
src/components/ui/: Icon.tsx  Toast.tsx
src/constants/: cam.ts  numeric.ts
src/exporters/: csv.ts  index.ts  tiff.ts
src/exporters/__tests__/: exporters.test.ts
src/hooks/: useWindowSize.ts
src/i18n/: translations.ts
src/services/: gifEncoder.ts  motion.ts
src/splash/: CamForgeSplash.tsx  Root.tsx  render.ts
src/stores/: history.ts  settings.ts  simulation.ts
src/stores/__tests__/: motion-laws.test.ts
src/stores/simulation/: compute.ts  exports.ts  presets.ts
src/test/: setup.ts
src/types/: index.ts  utif2.d.ts
src/utils/: chartDrawing.ts  debounce.ts  platform.ts
src/utils/__tests__/: array.test.ts  debounce.test.ts
src/workers/: tiffWorker.ts
