[workspace]
resolver = "2"
members = [
    "crates/camforge-core",
    "crates/camforge-server",
    "src-tauri",
]

[workspace.package]
version = "0.4.7"
edition = "2021"
authors = ["CamForge Team"]
license = "MIT"

[workspace.dependencies]
# 共享依赖版本
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-traits = "0.2"
thiserror = "1.0"
anyhow = "1.0"

# 内部 crate
camforge-core = { path = "crates/camforge-core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3