[package]
name = "camforge-next"
version = "0.1.2"
description = "CamForge-Next - High-performance cam mechanism simulator"
authors = ["CamForge Team"]
edition = "2021"

[lib]
name = "camforge_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Numerical computing
ndarray = "0.15"
num-traits = "0.2"

# Parallel computing
rayon = "1.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[features]
default = []
devtools = ["tauri/devtools"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

