[package]
name = "camforge"
version.workspace = true
description = "CamForge - High-performance cam mechanism simulator (Tauri desktop app)"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "camforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 内部核心库
camforge-core.workspace = true

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# 使用 workspace 共享依赖
serde.workspace = true
serde_json.workspace = true
num-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[features]
default = []
devtools = ["tauri/devtools"]
