[package]
name = "camforge-core"
version.workspace = true
description = "CamForge - Core computation engine for cam mechanism kinematics"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Numerical computing
num-traits = "0.2"

# Error handling
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"

[features]
default = []
