[package]
name = "camforge-core"
version.workspace = true
description = "CamForge - Core computation engine for cam mechanism kinematics"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
serde_json = "1"

[features]
default = []
